# i9corp-voip-sdk

./: .gitignore  .gitmodules  .gitmodules~  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_uninstall.cmake.in  install_manifest.txt
extras/: PKGBUILD  deploy-linux.sh  deploy.sh  deploy32.sh  main.cpp
include/i9corp/voip/common/: CommonExport.h  config_site.h
include/i9corp/voip/controller/: VoipHandlerController.h  VoipRegisterStateController.h
include/i9corp/voip/model/: IInputDeviceAudio.h  IOutputDeviceAudio.h  VoipAccount.h  VoipCall.h  VoipDeviceAudio.h  VoipInputAudioDevice.h  VoipLine.h  VoipOutputAudioDevice.h  VoipPlayback.h  VoipType.h
include/i9corp/voip/tools/: VoipTools.h
src/i9corp/voip/common/: CommonBuildLibrary.h
src/i9corp/voip/controller/: VoipHandlerController.cpp
src/i9corp/voip/model/: VoipAccount.cpp  VoipCall.cpp  VoipDeviceAudio.cpp  VoipInputAudioDevice.cpp  VoipLine.cpp  VoipOutputAudioDevice.cpp  VoipPlayback.cpp  VoipType.cpp
src/i9corp/voip/tools/: VoipTools.cpp
